[package]
name = "tofu_frontmatter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
regex = "1.5"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
toml = "0.5"
